--- a/Proyecto/vistas/main.html
+++ b/Proyecto/vistas/main.html
@@ -14,20 +14,22 @@
 	<div class="login" ng-if="inicio.login">
 		<footer></footer>
 		<div class="pane">
-			<form method="post" action="/login/">
+			<form>
 				<div class="form-group">
-					<label class=" required-field">E-Mail:</label> 
-					<input type="text" name="username" required id="id_username" class="form-control" maxlength="150">
+					<label class=" required-field">Email:</label> 
+					<input type="text" name="username" required id="id_username" class="form-control" ng-model="dato.usuario" maxlength="150">
 				</div>
 				<div class="form-group">
 					<label class=" required-field">Password:</label> 
-					<input type="password" name="password" required class="form-control" id="id_password">
+					<input type="password" name="password" required class="form-control" id="id_password" ng-model="dato.clave">
 				</div>
 				<div class="form-group">
-				<button ng-click="inicio.login = false" class="btn btn-default btn-primary btn-block" value="Login">Login</button><br>
+				<button ng-click="login()" class="btn btn-default btn-primary btn-block" value="Login">Login</button><br>
 				</div>
 			</form>
 		</div>
 	</div>
+
+	
 
 
