--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -11,6 +11,7 @@
  		<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
  		<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
  		<script src="bower_components/satellizer/dist/satellizer.min.js"></script>
+ 		<script src="https://www.gstatic.com/firebasejs/3.4.1/firebase.js"></script>
  		<link rel="stylesheet" href="style.css">
  	</head>
  	<body ng-app="proyecto">
