--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -13,6 +13,7 @@
  		<script src="bower_components/satellizer/dist/satellizer.min.js"></script>
  		<script src="https://www.gstatic.com/firebasejs/3.4.1/firebase.js"></script>
  		<link rel="stylesheet" href="style.css">
+ 		<script src="bower_components/angular-file-upload/dist/angular-file-upload.min.js"></script>
  	</head>
  	<body ng-app="proyecto">
 
