--- a/Proyecto/vistas/main.html
+++ b/Proyecto/vistas/main.html
@@ -2,7 +2,7 @@
 	
 	<button ng-if="!isAuthenticated()" ui-sref="juego.juego1()" type="button" class="btn btn-info btn-lg"> Juego loco</button>
 
-	<button ui-sref="abm.alta()" type="button" class="btn btn-warning btn-lg"> ABM personasdddd</button>
+	<button ui-sref="abm.alta()" type="button" class="btn btn-warning btn-lg"> ABM personas</button>
 
 	<button ng-click="inicio.login = true" type="button" class="btn btn-success btn-lg"> Login</button>
 
@@ -17,16 +17,16 @@
 		<footer></footer>
 		<div class="pane">
 			<form>
-<!-- 				<div class="form-group">
+ 				<div class="form-group">
 					<label class=" required-field">Email:</label> 
-					<input type="text" name="username" required id="id_username" class="form-control" ng-model="dato.usuario" maxlength="150">
+					<input type="text" name="username" required id="id_username" class="form-control" ng-model="datos.usuario" maxlength="150">
 				</div>
 				<div class="form-group">
 					<label class=" required-field">Password:</label> 
-					<input type="password" name="password" required class="form-control" id="id_password" ng-model="dato.clave">
-				</div> -->
+					<input type="password" name="password" required class="form-control" id="id_password" ng-model="datos.clave">
+				</div>
 				<div class="form-group">
-				<button ng-click="login()" class="btn btn-default btn-primary btn-block" value="Login">Login  jajaja</button><br>
+				<button ng-click="login()" class="btn btn-default btn-primary btn-block" value="Login">Login</button><br>
 				</div>
 			</form>
 		</div>
