--- a/Proyecto/vistas/abmAlta.html
+++ b/Proyecto/vistas/abmAlta.html
@@ -1,4 +1,4 @@
-	<div class="container">
+		<div class="container">
 		<div class="page-header">
 			<center> <h1> Formulario de alta</h1>   </center>     
 		</div>
@@ -44,7 +44,7 @@
 				<input type="file" nv-file-select uploader="uploader"/>
 				</div>
 
-				<a class="btn btn-warning" name="guardar" ng-disabled="formAlta.$invalid" ng-click="guardar()" ><span class="glyphicon glyphicon-save">&nbsp;</span>Enviar voto!</a>
+				<a class="btn btn-warning" name="guardar"  ng-click="guardar()" ><span class="glyphicon glyphicon-save">&nbsp;</span>Enviar voto!</a>
 					
 				</div>
 
